# trabalho-3-mongodb

./: .gitignore  README.md  divisao_tarefas.txt  main.py  pyproject.toml  seed.py
app/: config.py  database.py  main.py
app/models/: escala.py  funcionario.py  setor.py
app/routes/: dashboard_routes.py  escala_routes.py  funcionario_routes.py  setor_routes.py
